--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-API_KEYS='["sk-xxxxxxxxxxxxxxxxx", "sk-xxxxxxxxxxxxxxxxx"]'
+API_KEYS='["sk-proj-QZde4aFauKLv7jqPZLImT3BlbkFJkZGOLkRckZ3JPex1Z54i", "sk-proj-QZde4aFauKLv7jqPZLImT3BlbkFJkZGOLkRckZ3JPex1Z54i"]'
